# catchup-server

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml  security.yml
.sqlx/: query-7ad8a217323fd727d1a26616786c8503675020cdf40f133c4d247d670daee343.json  query-966f75a80ba0b3d7cb8c527492cbdd4447da520357d1cc02432215c92f9cf629.json
configuration/: base.yaml  dev.yaml
git-hooks/: pre-commit
migrations/: 20240505104827_create_articles_table.sql
scripts/: init_db.sh
src/: app.rs  configuration.rs  lib.rs  main.rs  telemetry.rs
src/api/: mod.rs  news.rs  scraper.rs  supported_sources.rs
src/domain/: article.rs  mod.rs  news_source.rs  tag.rs  url.rs  uuid_factory.rs
src/jobs/: mod.rs  scraper_job.rs
src/repository/: article.rs
src/services/: mod.rs
src/services/dou/: api.rs  article_scraper.rs  article_scraper_job.rs  mod.rs
src/services/hacker_news/: api.rs
src/services/irish_times/: api.rs  article_scraper_job.rs  articles_scraper.rs  mod.rs
tests/: test_app.rs
tests/api/: health_check.rs
