[package]
name = "catchup-server"
version = "0.1.0"
edition = "2021"
authors = ["Illia Riabchuk ilya.ryabchuk@gmail.com"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "catchup-server"

[workspace]
# https://github.com/servo/rust-url/issues/992
resolver = "1"

[dependencies]
actix-web = "4.9.0"
actix-jobs = "0.1.7"
actix-files = "0.6.6"
anyhow = "1.0.91"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.1"
reqwest = { version = "0.12.9", features = ["json"] }
scraper = "0.21.0"
secrecy = { version = "0.10.0", features = ["serde"] }
serde = { version = "1.0.214", features = ["derive"] }
serde-aux = "4.5.0"
thiserror = "2.0.2"
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.14"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dependencies.url]
version = "2.5.3"
features = ["default", "serde"]

[dependencies.tokio]
version = "1.41.0"
features = [
    "macros",
    "rt-multi-thread"
]

[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
rstest = "0.23.0"
tokio = { version = "1.41.0", features = ["rt", "macros"] }

